added more media queries, updated the portfolio section,

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    
     <div class="container">
         <div class="header">
             <h1>Hello, I'm Felix Popoola, a Graphic Designer</h1>
@@ -23,8 +24,11 @@
         </div>
         <div class="portfolio-item">
 
-            <p>Designed vibrant promotional materials for food businesses, highlighting culinary delights and brand
-                identity.</p>
+            <div class="section-header">
+                <h2>Portfolio Highlights</h2>
+                <p>Explore a selection of my creative works across branding, promotions, and visual storytelling.</p>
+            </div>
+
             <div class="gallery">
                 <img src="My project.png" alt="My Project">
                 <img src="induction.png" alt="Induction">
@@ -81,6 +85,9 @@
         </div>
     </div>
 
+
+
+
     <div class="contact-section">
         <h2>Contact Me</h2>
         <div class="contact-info">
@@ -89,7 +96,7 @@
                     href="mailto:popoolafelixoladotun@gmail.com">popoolafelixoladotun@gmail.com</a></p>
         </div>
     </div>
-      
+
 
     <footer class="footer">
         <div class="footer-content">
