sorted the file structure

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p>Showcasing creative and professional designs for diverse industries</p>
         </div>
         <div class="profile">
-            <img src="felix.jpg" alt="Felix Popoola">
+            <img src="./images/felix.jpg" alt="Felix Popoola">
             <p>A skilled graphic designer, I bring a unique blend of creativity and technical expertise to every
                 project. With a passion for visual storytelling and a deep understanding of design principles, I am
                 dedicated to creating visually stunning and impactful designs that leave a lasting impression.</p>
@@ -30,16 +30,16 @@
             </div>
 
             <div class="gallery">
-                <img src="My project.png" alt="My Project">
-                <img src="induction.png" alt="Induction">
-                <img src="feast_with_Tee.png" alt="Feast with Tee">
-                <img src="Jennie's Emporiumm.png" alt="Jennie's Emporiumm">
-                <img src="Copy of Jennie's Emporium.png" alt="Copy of Jennie's Emporium">
-                <img src="Jennie's Emporium.png" alt="Jennie's Emporium">
-                <img src="adewhite.png" alt="Adewite">
-                <img src="christmascarol.png" alt="Christmas Carol">
-                <img src="Nifunmi.png" alt="Nifunmi">
-                <img src="tamind.png" alt="Tamind">
+                <img src="./images/My project.png" alt="My Project">
+                <img src="./images/induction.png" alt="Induction">
+                <img src="./images/feast_with_Tee.png" alt="Feast with Tee">
+                <img src="./images/Jennie's Emporiumm.png" alt="Jennie's Emporiumm">
+                <img src="./images/Copy of Jennie's Emporium.png" alt="Copy of Jennie's Emporium">
+                <img src="./images/Jennie's Emporium.png" alt="Jennie's Emporium">
+                <img src="./images/adewhite.png" alt="Adewite">
+                <img src="./images/christmascarol.png" alt="Christmas Carol">
+                <img src="./images/Nifunmi.png" alt="Nifunmi">
+                <img src="./images/tamind.png" alt="Tamind">
 
             </div>
         </div>
@@ -48,12 +48,12 @@
             <p>Created eye-catching flyers for unisex salons and makeup services, emphasizing style and customer offers.
             </p>
             <div class="gallery">
-                <img src="royal_unisex_salon_offer.jpg" alt="Royal Unisex Salon Offer">
-                <img src="royal_hairwaves_barbing_salon.jpg" alt="Royal Hairwaves Barbing Salon">
-                <img src="mercy_glow_makeover.jpg" alt="Mercy Glow Makeover">
-                <img src="royal_hairwaves_unisex_salon.jpg" alt="Royal Hairwaves Unisex Salon">
-                <img src="lovina_glams.jpg" alt="Lovina Glams">
-                <img src="charlex.jpg" alt="Charlex">
+                <img src="./images/royal_unisex_salon_offer.jpg" alt="Royal Unisex Salon Offer">
+                <img src="./images/royal_hairwaves_barbing_salon.jpg" alt="Royal Hairwaves Barbing Salon">
+                <img src="./images/mercy_glow_makeover.jpg" alt="Mercy Glow Makeover">
+                <img src="./images/royal_hairwaves_unisex_salon.jpg" alt="Royal Hairwaves Unisex Salon">
+                <img src="./images/lovina_glams.jpg" alt="Lovina Glams">
+                <img src="./images/charlex.jpg" alt="Charlex">
             </div>
         </div>
         <div class="portfolio-item">
@@ -61,25 +61,25 @@
             <p>Developed promotional designs for POS and smartphone services, focusing on reliability and customer
                 convenience.</p>
             <div class="gallery">
-                <img src="pos_smart_phone_easybuy.jpg" alt="POS Smart Phone Easybuy">
-                <img src="techiee.jpg" alt="techiee">
-                <img src="childrenday.png" alt="Children's Day">
-                <img src="pristine.png" alt="Pristine">
-                <img src="ruthie.png" alt="Ruthie">
-                <img src="sbxchange.png">
-                <img src="prestine.png" alt="Prestine">
-                <img src="systemfort.png" alt="Systemfort">
+                <img src="./images/pos_smart_phone_easybuy.jpg" alt="POS Smart Phone Easybuy">
+                <img src="./images/techiee.jpg" alt="techiee">
+                <img src="./images/childrenday.png" alt="Children's Day">
+                <img src="./images/pristine.png" alt="Pristine">
+                <img src="./images/ruthie.png" alt="Ruthie">
+                <img src="./images/sbxchange.png">
+                <img src="./images/prestine.png" alt="Prestine">
+                <img src="./images/systemfort.png" alt="Systemfort">
             </div>
         </div>
         <div class="portfolio-item">
 
             <p>Designed elegant invitations and event flyers for weddings, birthdays, and religious gatherings.</p>
             <div class="gallery">
-                <img src="oiza_blessing_ayomide_wedding.jpg" alt="Oiza Blessing Ayomide Wedding">
-                <img src="god_never_fail_4god_omira.jpg" alt="God Never Fail 4God Omira">
-                <img src="grace_revolution_camp_meeting.jpg" alt="Grace Revolution Camp Meeting">
-                <img src="TRC.jpg" alt="TRC">
-                <img src="new_poster.jpg" alt="New Poster">
+                <img src="./images/oiza_blessing_ayomide_wedding.jpg" alt="Oiza Blessing Ayomide Wedding">
+                <img src="./images/god_never_fail_4god_omira.jpg" alt="God Never Fail 4God Omira">
+                <img src="./images/grace_revolution_camp_meeting.jpg" alt="Grace Revolution Camp Meeting">
+                <img src="./images/TRC.jpg" alt="TRC">
+                <img src="./images/new_poster.jpg" alt="New Poster">
 
             </div>
         </div>
